--- a/src/video_indexer/requirements.txt
+++ b/src/video_indexer/requirements.txt
@@ -11,5 +11,6 @@ openai-whisper==20231117
 tiktoken==0.7.0
 lancedb==0.12.0
 azure-search-documents==11.5.1
+azure-identity==1.17.1
 azure-cosmos==4.7.0
 requests==2.32.3
