--- a/.env_template
+++ b/.env_template
@@ -5,3 +5,6 @@ OPENAI_API_VERSION=
 OPENAI_AZURE_DEPLOYMENT_EMBEDDINGS=
 AZURE_SPEECH_KEY=
 AZURE_SPEECH_REGION=
+SERVICEBUS_CONNECTION_STRING=
+COSMOSDB_CONNECTION_STRING=
+STATUS_ENDPOINT=
