--- a/src/image_indexer/requirements.txt
+++ b/src/image_indexer/requirements.txt
@@ -6,3 +6,6 @@ langchain-community
 langchain-openai
 python-dotenv
 azure-cognitiveservices-speech
+azure-servicebus==7.13.0
+azure-cosmos==4.8.0
+azure-storage-blob==12.24.0
