--- a/src/pdf_indexer/requirements.txt
+++ b/src/pdf_indexer/requirements.txt
@@ -5,4 +5,9 @@ langchain-core
 langchain-community
 langchain-openai
 python-dotenv
+azure-search-documents==11.5.2
 azure-cognitiveservices-speech
+azure-servicebus==7.13.0
+azure-storage-blob==12.24.0
+azure-cosmos==4.8.0
+azure-identity==1.19.0
