--- a/src/image_indexer/requirements.txt
+++ b/src/image_indexer/requirements.txt
@@ -1,11 +1,11 @@
-pypdf
-langchain
-langchain-text-splitters
-langchain-core
-langchain-community
-langchain-openai
-python-dotenv
-azure-cognitiveservices-speech
-azure-servicebus==7.13.0
-azure-cosmos==4.8.0
-azure-storage-blob==12.24.0
+python-dotenv==1.0.1
+azure-servicebus==7.12.2
+azure-storage-blob==12.19.0
+azure-cosmos==4.5.1
+openai==1.40.3
+langchain-core==0.2.29
+langchain-text-splitters==0.2.2
+langchain-openai==0.1.21
+langchain-community==0.2.11
+tiktoken==0.7.0
+requests==2.32.3
