--- a/src/output/requirements.txt
+++ b/src/output/requirements.txt
@@ -1,5 +1,6 @@
-azure-servicebus==7.12.2
-azure-cosmos==4.8.0
 fastapi[standard]==0.112.0
+pydantic==2.8.2
 python-dotenv==1.0.1
-requests==2.32.3
+azure-servicebus==7.12.2
+azure-cosmos==4.5.1
+uvicorn==0.30.6
