--- a/src/pdf_indexer/requirements.txt
+++ b/src/pdf_indexer/requirements.txt
@@ -1,13 +1,10 @@
-pypdf
-langchain
-langchain-text-splitters
-langchain-core
-langchain-community
-langchain-openai
-python-dotenv
-azure-search-documents==11.5.2
-azure-cognitiveservices-speech
-azure-servicebus==7.13.0
-azure-storage-blob==12.24.0
-azure-cosmos==4.8.0
-azure-identity==1.19.0
+requests==2.32.3
+python-dotenv==1.0.1
+azure-servicebus==7.12.2
+azure-storage-blob==12.19.0
+azure-cosmos==4.5.1
+langchain-text-splitters==0.2.2
+langchain-openai==0.1.21
+langchain-community==0.2.11
+pypdf==4.3.1
+tiktoken==0.7.0
