--- a/src/podcast_generator/requirements.txt
+++ b/src/podcast_generator/requirements.txt
@@ -1,18 +1,9 @@
-pytubefix
-moviepy
-openai-whisper
-langchain
-langchain-text-splitters
-langchain-core
-langchain-community
-lancedb
-langchain-openai
-tiktoken
-openai
-python-dotenv
-azure-cognitiveservices-speech
-azure-search-documents==11.5.2
-azure-servicebus==7.13.0
-azure-cosmos==4.8.0
-azure-storage-blob==12.24.0
-azure-identity==1.19.0
+python-dotenv==1.0.1
+azure-servicebus==7.12.2
+azure-cosmos==4.5.1
+azure-storage-blob==12.19.0
+openai==1.40.3
+langchain-openai==0.1.21
+langchain-core==0.2.29
+langchain-community==0.2.11
+azure-cognitiveservices-speech==1.38.0
